[project]
name = "netshop"
version = "0.1.0"
description = ""
authors = [
    {name = "gleafy",email = "greenleafy@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"


[tool.poetry.group.lint.dependencies]
mypy = "^1.15.0"
isort = "^6.0.1"
black = "^25.1.0"
flake8 = "^7.2.0"


[tool.black]
line-length = 119
exclude = '''
/(
    \.git
  | \.venv
  | venv
)/
'''

[tool.isort]
profile = "black"
line_length = 119


[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'
